Amélioration des tests ProjectService avec MockQueryable
Refactorisation des tests unitaires de ProjectService pour utiliser MockQueryable.Moq et BuildMockDbSet, permettant de simuler les DbSet EF Core et d'améliorer la fiabilité des tests sur les requêtes LINQ. Ajout d'une personnalisation AutoFixture (EfCoreCustomization) pour ignorer les propriétés virtuelles et éviter les problèmes de récursivité. Sécurisation de la méthode CreateAsync avec des vérifications de paramètres et génération explicite d'ID. Nettoyage des usings et ajout de helpers pour la configuration des mocks. Ajout d'un fichier temporaire de sauvegarde du projet de tests.

--- a/src/FlowTasks.Tests/FlowTasks.Tests.csproj
+++ b/src/FlowTasks.Tests/FlowTasks.Tests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="FluentValidation" Version="12.1.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+    <PackageReference Include="MockQueryable.Moq" Version="8.0.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
