--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,7 +96,7 @@ jobs:
           name: test-results
           path: "**/TestResults/*.trx"
 
-  # 4. Code Quality (SonarCloud ou autre)
+  # 4. Code Quality
   quality:
     needs: test
     runs-on: ubuntu-latest
@@ -113,10 +113,10 @@ jobs:
           SONAR_HOST_URL: https://sonarcloud.io
         with:
           args: >
-            -Dsonar.projectKey=TaskFlow
-            -Dsonar.organization=faiez_benamar
+            -Dsonar.projectKey=benamarfaiez_TaskFlow
             -Dsonar.sources=.
             -Dsonar.tests=.
+            -Dsonar.exclusions=**/bin/**,**/obj/**,**/*.xml
             -Dsonar.cs.opencover.reportsPaths=**/coverage/**/*.opencover.xml
             -Dsonar.qualitygate.wait=true
 
