--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,8 +8,9 @@ on:
 
 jobs:
   # 1. Checkout + Setup .NET
-  setup:
+  setup-backend:
     runs-on: ubuntu-latest
+    if: contains(github.event.commits.*.modified, 'Backend/') || contains(github.event.commits.*.added, 'Backend/') || contains(github.event.commits.*.removed, 'Backend/')
     outputs:
       cache-key: ${{ steps.cache.outputs.cache-key }}
     steps:
@@ -32,9 +33,10 @@ jobs:
           restore-keys: ${{ runner.os }}-nuget-
 
   # 2. Restore dependencies + Build
-  build:
-    needs: setup
+  build-backend:
+    needs: setup-backend
     runs-on: ubuntu-latest
+    if: contains(github.event.commits.*.modified, 'Backend/') || contains(github.event.commits.*.added, 'Backend/') || contains(github.event.commits.*.removed, 'Backend/')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -51,9 +53,10 @@ jobs:
         run: dotnet build ./Backend/FlowTasks.sln --configuration Release --no-restore
 
   # 3. Unit Tests + Coverage
-  test:
-    needs: build
+  test-backend:
+    needs: build-backend
     runs-on: ubuntu-latest
+    if: contains(github.event.commits.*.modified, 'Backend/') || contains(github.event.commits.*.added, 'Backend/') || contains(github.event.commits.*.removed, 'Backend/')
     services:
       postgres:
         image: postgres:16-alpine
@@ -97,9 +100,10 @@ jobs:
           path: "**/TestResults/*.trx"
 
   # 4. Code Quality
-  quality:
-    needs: test
+  quality-backend:
+    needs: test-backend
     runs-on: ubuntu-latest
+    if: contains(github.event.commits.*.modified, 'Backend/') || contains(github.event.commits.*.added, 'Backend/') || contains(github.event.commits.*.removed, 'Backend/')
     steps:
       - name: Checkout code
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
@@ -122,8 +126,8 @@ jobs:
             -Dsonar.qualitygate.wait=true
 
   # 5. Build & Push Docker Image
-  docker:
-    needs: quality
+  docker-backend:
+    needs: quality-backend
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     permissions:
@@ -153,3 +157,88 @@ jobs:
             ghcr.io/$$ {{ github.repository_owner }}/ $${{ github.event.repository.name }}:latest
             ghcr.io/$$ {{ github.repository_owner }}/ $${{ github.event.repository.name }}:${{ github.sha }}
             ghcr.io/$$ {{ github.repository_owner }}/ $${{ github.event.repository.name }}:${{ github.ref_name == 'main' && 'stable' || 'dev' }}
+
+# ======================== FRONTEND JOBS ========================
+
+  setup-frontend:
+    runs-on: ubuntu-latest
+    if: contains(github.event.commits.*.modified, 'Frontend/') || contains(github.event.commits.*.added, 'Frontend/') || contains(github.event.commits.*.removed, 'Frontend/')
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: Frontend/package-lock.json
+
+      - name: Install dependencies
+        run: cd Frontend && npm ci --legacy-peer-deps
+
+      - name: Lint
+        run: cd Frontend && npm run lint
+
+      # Décommente si tu ajoutes des tests Angular
+      # - name: Run tests
+      #   run: cd Frontend && npm run test -- --watch=false --browsers=ChromeHeadless
+
+  build-frontend:
+    needs: setup-frontend
+    runs-on: ubuntu-latest
+    if: contains(github.event.commits.*.modified, 'Frontend/') || contains(github.event.commits.*.added, 'Frontend/') || contains(github.event.commits.*.removed, 'Frontend/')
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: Frontend/package-lock.json
+
+      - name: Install & Build
+        run: |
+          cd Frontend
+          npm ci --legacy-peer-deps
+          npm run build -- --configuration production
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-dist
+          path: Frontend/dist/
+
+  docker-frontend:
+    needs: build-frontend
+    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && (contains(github.event.commits.*.modified, 'Frontend/') || contains(github.event.commits.*.added, 'Frontend/') || contains(github.event.commits.*.removed, 'Frontend/') || contains(github.event.commits.*.modified, 'Frontend/Dockerfile'))
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push frontend image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./Frontend
+          file: ./Frontend/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/taskflow-frontend:latest
+            ghcr.io/${{ github.repository_owner }}/taskflow-frontend:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/taskflow-frontend:${{ github.ref_name == 'main' && 'stable' || 'dev' }}
