--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,14 +3,21 @@ name: CI / CD – TaskFlow
 on:
   push:
     branches: [ main, develop ]
+    paths:
+      - 'Backend/**'
+      - 'Frontend/**'
+      - '.github/workflows/**'
   pull_request:
     branches: [ main, develop ]
+    paths:
+      - 'Backend/**'
+      - 'Frontend/**'
+      - '.github/workflows/**'
 
 jobs:
   # 1. Checkout + Setup .NET
   setup-backend:
     runs-on: ubuntu-latest
-    if: contains(github.event.commits.*.modified, '../Backend/') || contains(github.event.commits.*.added, '../Backend/') || contains(github.event.commits.*.removed, '../Backend/')
     outputs:
       cache-key: ${{ steps.cache.outputs.cache-key }}
     steps:
@@ -36,7 +43,6 @@ jobs:
   build-backend:
     needs: setup-backend
     runs-on: ubuntu-latest
-    if: contains(github.event.commits.*.modified, '../Backend/') || contains(github.event.commits.*.added, '../Backend/') || contains(github.event.commits.*.removed, '../Backend/')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -56,7 +62,6 @@ jobs:
   test-backend:
     needs: build-backend
     runs-on: ubuntu-latest
-    if: contains(github.event.commits.*.modified, '../Backend/') || contains(github.event.commits.*.added, '../Backend/') || contains(github.event.commits.*.removed, '../Backend/')
     services:
       postgres:
         image: postgres:16-alpine
@@ -103,7 +108,6 @@ jobs:
   quality-backend:
     needs: test-backend
     runs-on: ubuntu-latest
-    if: contains(github.event.commits.*.modified, '../Backend/') || contains(github.event.commits.*.added, '../Backend/') || contains(github.event.commits.*.removed, '../Backend/')
     steps:
       - name: Checkout code
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
@@ -128,7 +132,6 @@ jobs:
   # 5. Build & Push Docker Image
   docker-backend:
     needs: quality-backend
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -162,7 +165,6 @@ jobs:
 
   setup-frontend:
     runs-on: ubuntu-latest
-    if: contains(github.event.commits.*.modified, 'Frontend/') || contains(github.event.commits.*.added, 'Frontend/') || contains(github.event.commits.*.removed, 'Frontend/')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -187,7 +189,6 @@ jobs:
   build-frontend:
     needs: setup-frontend
     runs-on: ubuntu-latest
-    if: contains(github.event.commits.*.modified, 'Frontend/') || contains(github.event.commits.*.added, 'Frontend/') || contains(github.event.commits.*.removed, 'Frontend/')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -213,7 +214,6 @@ jobs:
 
   docker-frontend:
     needs: build-frontend
-    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && (contains(github.event.commits.*.modified, 'Frontend/') || contains(github.event.commits.*.added, 'Frontend/') || contains(github.event.commits.*.removed, 'Frontend/') || contains(github.event.commits.*.modified, 'Frontend/Dockerfile'))
     runs-on: ubuntu-latest
     permissions:
       packages: write
