Refactorisation de la configuration et gestion des secrets
Ajout d’un fichier appsettings.json pour centraliser la configuration (journalisation, connexion DB, JWT). Utilisation de UserSecretsId pour la gestion sécurisée des secrets en développement. Refactorisation de Program.cs pour lire les paramètres sensibles (connexion DB, clé JWT, URL CORS) depuis la configuration, améliorant ainsi la flexibilité et la sécurité.

--- a/Backend/src/FlowTasks.API/FlowTasks.API.csproj
+++ b/Backend/src/FlowTasks.API/FlowTasks.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>edb59238-8d13-4f8f-be87-065b28b31de9</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
