--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -175,6 +175,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ./Backend/dockerfile
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/taskflow:latest
