--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -174,6 +174,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          cache: false
           context: .
           file: ./Backend/dockerfile
           push: true
