--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -174,9 +174,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          cache: false
           context: .
-          file: ./Backend/dockerfile
+          file: ./Backend/Dockerfile
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/taskflow:latest
