add log to program.cs

--- a/Backend/src/FlowTasks.API/appsettings.Development.json
+++ b/Backend/src/FlowTasks.API/appsettings.Development.json
@@ -5,6 +5,15 @@
       "Microsoft.AspNetCore": "Information",
       "Microsoft.EntityFrameworkCore": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Jwt": {
+    "Key": "",
+    "Issuer": "FlowTasks",
+    "Audience": "FlowTasks"
+  },
+  "UrlFrontend": ""
 }
 
